<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="Setting">Настройки</string>
    <string name="theme_night">Тёмная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в техподдержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="practicum_adress">https://practicum.yandex.ru/android-developer/ </string>
    <string name="my_email_adress">super.ura103@yandex.ru</string>
    <string name="title_support">Сообщение разработчикам и разработчицам приложения Playlist Maker.</string>
    <string name="message_support">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="url_practicum_offer">https://yandex.ru/legal/practicum_offer</string>
    <string name="track_name_1">Smells Like Teen Spirit</string>
    <string name="track_name_2">Billie Jean</string>
    <string name="track_name_3">Staying\' Alive</string>
    <string name="track_name_4">Whole Lotta Love</string>
    <string name="track_name_5">Sweet Child O\'Mine</string>
    <string name="artist_name_1">Nirvana</string>
    <string name="artist_name_2">Michael Jackson</string>
    <string name="artist_name_3">Bee Gees</string>
    <string name="artist_name_4">Led Zeppelin</string>
    <string name="artist_name_5">Guns N\' Roses</string>
    <string name="track_time_1">5:01</string>
    <string name="track_time_2">4:35</string>
    <string name="track_time_3">4:10</string>
    <string name="track_time_4">5:33</string>
    <string name="track_time_5">5:03</string>
    <string name="artwork_url_1">https://is5–ssl.mzstatic.com/image/thumb/Music115/v4/7b/58/c2/7b58c21a–2b51–2bb2-e59a-9bb9b96ad8c3/00602567924166.rgb.jpg/100x100bb.jpg</string>
    <string name="artwork_url_2" tools:ignore="TypographyDashes">https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/3d/9d/38/3d9d3811-71f0-3a0e-1ada-3004e56ff852/827969428726.jpg/100x100bb.jpg></string>
    <string name="artwork_url_3" tools:ignore="TypographyDashes,Typos">https://is4-ssl.mzstatic.com/image/thumb/Music115/v4/1f/80/1f/1f801fc1-8c0f-ea3e-d3e5-387c6619619e/16UMGIM86640.rgb.jpg/100x100bb.jpg</string>
    <string name="artwork_url_4" tools:ignore="TypographyDashes">https://is2–ssl.mzstatic.com/image/thumb/Music62/v4/7e/17/e3/7e17e33f–2efa-2a36-e916-7f808576cf6b/mzm.fyigqcbs.jpg/100x100bb.jpg</string>
    <string name="artwork_url_5" tools:ignore="TypographyDashes"> https://is2–ssl.mzstatic.com/image/thumb/Music62/v4/7e/17/e3/7e17e33f-2efa-2a36-e916-7f808576cf6b/mzm.fyigqcbs.jpg/100x100bb.jpg</string>

</resources>