<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:paddingStart="@dimen/padding_start"
        android:paddingTop="@dimen/padding_top"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:fontFamily="@font/ys_display_medium"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size"
        tools:ignore="MissingConstraints,RtlSymmetry,VisualLintOverlap,TextContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <Button
            android:id="@+id/buttonSearch"
            style="@style/mainButtonStyle"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="@dimen/padding_start"
            android:text="@string/search"
            app:icon="@drawable/search"
            tools:ignore="MissingConstraints,Suspicious0dp,DuplicateSpeakableTextCheck,VisualLintButtonSize,TextContrastCheck" />

        <Button
            android:id="@+id/buttonMediateka"
            style="@style/mainButtonStyle"
            android:backgroundTint="@color/white"
            android:text="@string/media"
            app:icon="@drawable/music"
            tools:ignore="HardcodedText,MissingConstraints,Suspicious0dp,VisualLintButtonSize,TextContrastCheck" />


        <Button
            android:id="@+id/buttonSettings"
            style="@style/mainButtonStyle"
            android:layout_marginTop="@dimen/padding_start"
            android:layout_marginBottom="28dp"
            android:text="@string/Setting"
            app:icon="@drawable/setting"
            tools:ignore="HardcodedText,VisualLintButtonSize,TextContrastCheck" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
