<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.PlaylistMaker"
    android:background="?attr/colorSecondary"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="14dp"
    tools:ignore="RtlSymmetry">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="2dp"
            android:paddingHorizontal="4dp"
            android:paddingVertical="4dp"
            android:src="@drawable/back"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="28dp"
            android:text="@string/Setting"
            android:textColor="?attr/colorOnSecondary"
            android:textFontWeight="500"
            android:textSize="@dimen/text_size" />
    </LinearLayout>
    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

    <TextView
        style="@style/messageTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:paddingVertical="@dimen/padding_vertical"
        android:text="@string/theme_night" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="11dp"
            android:minHeight="48dp"
            android:paddingVertical="11dp"
            android:paddingStart="9dp"
            android:paddingEnd="12dp"
            app:icon="@drawable/control"
            android:thumbTint="?attr/thumbColor"
            android:trackTint="?attr/trackColor"
            tools:ignore="UseSwitchCompatOrMaterialXml" />


    </FrameLayout>
    <FrameLayout
        android:id="@+id/button_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingVertical="@dimen/padding_vertical"
            android:text="@string/share"
            style="@style/messageTextStyle"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="@dimen/padding_start"
            android:src="@drawable/share"
            app:iconTint="?attr/iconTint"
            tools:ignore="ContentDescription,ImageContrastCheck" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/button_write_support"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingVertical="@dimen/padding_vertical"
            android:text="@string/support"
            style="@style/messageTextStyle"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="14dp"
            android:src="@drawable/support"
            tools:ignore="ContentDescription,ImageContrastCheck" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/button_user_agreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingVertical="@dimen/padding_vertical"
            android:text="@string/user_agreement"
            style="@style/messageTextStyle"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/arrow_forward"
            app:iconTint="?attr/iconTint"
            tools:ignore="ContentDescription,ImageContrastCheck" />

    </FrameLayout>

</LinearLayout>

